roughing out compositionImage, corrected scrolling for new visible page-2-inner width, corrected width of far plane in page2 scroll calcs

--- a/css/styles.css
+++ b/css/styles.css
@@ -567,7 +567,10 @@ body, .zero-spacing {
 }
 
 .page-2-inside {
+    position: absolute;
     left: 15%;
+    width: 85%;
+    height: 100%;
 }
 
 /* temporary debugging helpers */
